src/Components/Color/Color.css
.color-card {
  margin: 10px;
  padding: 5px;
  border-radius: 5px; /* rounded corners */
  border: solid 1px rgb(87, 87, 87);
  height: 300px;
  width: 250px;

  /* Inhalt der color card am unteren Ende */
  display: flex;
  flex-direction: column;
  justify-content: end;
}

.color-card-headline {
  padding: 2px 6px;
  /* background: black; */
  color: white;
}

/* adding a color wheel after the headline */
/* <a href="https://www.flaticon.com/free-icons/color-wheel" title="color wheel icons">Color wheel icons created by Color creator - Flaticon</a> */
.color-card-headline::after {
  content: "";
  display: inline-block;
  width: 50px;
  height: 50px;
  background-image: url("../../assets/color-wheel.png");
  background-size: contain;
  background-repeat: no-repeat;
  margin-left: 8px;
  vertical-align: middle;
}

/* putting the color wheel in the center for mobile view*/
@media (max-width: 600px) {
  .color-card-headline::after {
    display: block;
    margin: 8px auto 0;
  }
}

.hex-text {
  font-weight: bold;
}

.role-text {
  text-decoration: underline;
}

.confirmation-message {
  background: black;
  color: white;
  padding: 5px;
  margin: 5px;
  width: 108px;
  border-radius: 5px; /* rounded corners */
}

.confirm-button,
.delete-button,
.cancel-button,
.edit-button {
  border-radius: 5px; /* rounded corners */
}

.delete-edit-button-container {
  display: flex;
  justify-content: flex-start;
  gap: 10px; /* Abstand zwischen den Buttons */
}

input {
  border-radius: 5px; /* rounded corners */
}

